summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: not found: value Direction
setDirection(Direction.est)
             ^Moria:16: error: not found: value Direction
  setDirection(Direction.west)
               ^Moria:22: error: not found: value Direction
  setDirection(Direction.est)
               ^